# rust-actix-angular

./: Cargo.toml
angular-frontend-demo/: README.md  angular.json  karma.conf.js  package.json
angular-frontend-demo/e2e/src/: app.e2e-spec.ts
angular-frontend-demo/src/: index.html
angular-frontend-demo/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
angular-frontend-demo/src/app/services/: todo-service.service.ts
angular-frontend-demo/src/app/todo-item/: todo-interface.ts  todo-item.component.html
angular-frontend-demo/src/app/todo-list/: todo-list.component.html  todo-list.component.ts  todo.model.ts
src/: main.rs  models.rs
src/models/: todo.rs
src/services/: todos.rs
