[package]
name = "rust-restful-actix"
version = "0.1.0"
authors = ["Sebastian Strobl <Sebastian@Strobl.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = {version="*", features=["postgres"]}
dotenv = "*"
chrono = "*"